# hl_unification

./: .gitignore  BACKLOG.md  MUJOCO_LOG.TXT  README.md  install_docker.sh  install_remote.sh  install_robot.sh  install_sim.sh  pyproject.toml  ros2_topics.md
booster_assets/: pyproject.toml
booster_assets/src/booster_assets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
booster_deploy/: MUJOCO_LOG.TXT  inject_values.py  pyproject.toml
booster_deploy/booster_deploy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
booster_deploy/booster_deploy/controllers/: booster_robot_controller.py  rl_game_controller.py  sim_controller.py
booster_deploy/scripts/: deploy.py
booster_deploy/tasks/locomotion/: __init__.py  locomotion.py
booster_deploy/tasks/locomotion/models/: policy.pt  t1_test.pt
booster_robotics_sdk/: pyproject.toml
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  install_docker.sh
docs/: booster_assets.md  booster_deploy.md  booster_robotics_sdk.md  dev_guide.md  docker_guide.md  hsl_player.md  limites_t1_walk.md  multi_player.md  rl_deploy_debug.md  ros2_topics.md
hsl-player/: nohup.out
hsl-player/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hsl-player/log/: latest_build
hsl-player/scripts/: sound.sh  start.sh  stop.sh  sync_time.sh
hsl-player/src/booster_msgs/: CMakeLists.txt
hsl-player/src/booster_ros2_interface/: CMakeLists.txt
hsl-player/src/brain/: CMakeLists.txt
hsl-player/src/brain/behavior_trees/: assist.xml  chase.xml  game.xml  test_rl.xml  teste.xml
hsl-player/src/brain/config/: config.yaml
hsl-player/src/brain/include/: brain.h  brain_config.h  brain_data.h  brain_log.h  brain_tree.h  robot_client.h  team_communication_msg.h  types.h
hsl-player/src/brain/launch/: launch.py
hsl-player/src/brain/src/: brain.cpp  brain_communication.cpp  brain_config.cpp  brain_data.cpp  brain_log.cpp  (+3 more)
hsl-player/src/game_controller/: CMakeLists.txt
hsl-player/src/vision/: CMakeLists.txt
(+907 files in other folders)
