[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "booster-assets"
version = "1.0.0"
description = "Booster assets"
readme = "README.md"
authors = [{ name = "Booster Inc." }]
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
